# territory-oss

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  requirements.txt  rust-toolchain.toml  shell.nix
client/: Cargo.toml  pyproject.toml
client/python-src/territory_client/: filestorage.py  resolver.py
client/src/: lib.rs
core/: Cargo.toml  build.rs
core/src/: db.rs  lib.rs  node_diff.rs  pblib.rs  pretty_print.rs  resolver.rs  search.rs  ser.rs  slicemap_trie.rs  strings_trie.rs  token_writer.rs  wasm_bindings.rs
front/: .env  package.json
front/public/: index.html
front/src/: App.css  App.js  firebase.js  index.css  index.js
front/src/api/: api.js  searchWorker.js
front/src/components/: ActivityIndicatorLogo.js  ActivityIndicatorLogo.module.css  AnonUserMenu.js  DashboardHeader.js  DashboardHeader.module.css  Explained.js  Explained.module.css  GithubRepoUrlInput.js  GithubRepoUrlInput.module.css  Layout.js  Layout.module.css  LegalFooter.js  LegalFooter.module.css  Loader.js  Loader.module.css  Modal.js  Modal.module.css  Navbar.js  Navbar.module.css  PrimaryTip.js  PrimaryTip.module.css  SettingsLayout.js  SettingsLayout.module.css  SettingsSidebar.js  UserAvatar.js  UserAvatar.module.css  UserMenu.js  UserMenu.module.css
front/src/contexts/: graphContext.js  mapsContext.js  searchContext.js  userContext.js
front/src/hooks/: useKey.js  usePrevious.js
front/src/local/: local.js
front/src/routes/: FreeMapForRepo.js  NewMapByLink.js  ProtectedRoute.js  PublicOnly.js  routes.js
front/src/utils/: checkIfScrollable.js  copyToClipboard.js  isElementInViewport.js  mapTextToComponents.js  (+2 more)
indexers/clangrs/: Cargo.toml
indexers/clangrs/benches/: get_span.rs
indexers/clangrs/src/: args.rs  buildroot.rs  filetree.rs  intermediate_model.rs  lib.rs  locks_agent.rs  looks.rs  main.rs  output_stage.rs  parse_stage.rs  scanner_driver.rs  serial_stage.rs  slicemap_trie_writer.rs  testlib.rs  timers.rs  uim.rs  unparsed_listing.rs  uses_stage.rs  writer.rs
indexers/clangrs/src/storage/: common.rs  file.rs  gcloud.rs  mem.rs  mod.rs  null.rs
indexers/clangrs/tests/: asm_tests.rs  go_tests.rs  incremental_tests.rs  logging_tests.rs  oversized_tests.rs  python_tests.rs  reachability_tests.rs  search_index_test.rs  sepples_tests.rs
indexers/cscanner/: Cargo.toml
indexers/cscanner/src/: ast.rs  commands.rs  ipc.rs  lib.rs  main.rs  source.rs
ops/dev/: build_all.sh
proto/: index.proto  uim.proto
repos/example/: Makefile  compile_commands.json  mod1.c  shared.h
repos/example-asm/: compile_commands.json  inc.h  pmjump.S
repos/example-comments/: compile_commands.json  mod1.c
repos/example-deadlock/: a.h  b.h  compile_commands.json  mod6.c
repos/example-include-path/: compile_commands.json
repos/example-inlined-include/: compile_commands.json  constants.c
repos/go/: README  go.mod  main.go
repos/go-comments/: go.mod  main.go
repos/go-ifaces/: main.go
repos/go-multifile/: main.go  secondary.go
repos/go-multimod/: go.mod  go.work
repos/go-multipkg/: go.mod  main.go
repos/go-toplevel-vars/: main.go
repos/py/: example.py
schema/: package-lock.json
schema/maps/: github.mjs  package-lock.json  package.json  schema.mjs  test.mjs
territory_local_indexer/: pyproject.toml  test_e2e.py
(+104 files in other folders)
