[package]
name = "tt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
territory_core = { path = "../core", features = ["db"] }
prost = "0.11.9"
pyo3 = { version = "0.20.0" }
pythonize = "0.20.0"

[features]
py = ["pyo3/extension-module"]
